Fixing header spacing

--- a/css/info.css
+++ b/css/info.css
@@ -12,6 +12,7 @@
 /* Editing header. */
 h2 {
   padding-top: 30px;
+  padding-left: 20px;
   padding-bottom: 15px;
 }
 
